# tytr

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: index.md
examples/testing_types/: README.md  example.py
src/tytr/: __init__.py  _internal.py  core.py  testing.py  utilities.py
tests/: test_core.py  test_internal.py  test_utilities.py
